Add simple risk calculation of untested classes